My Portfolio Push

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,28 @@
 * CSS file to hold styles that apply across the application
 */
 
+/* add an amazing animation to the social icons */
 @import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400&family=Montserrat:wght@200;400;600;800&display=swap");
+
+@keyframes socialIconAnimation {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+img.socialIcon {
+  height: 30px;
+  width: 30px;
+  animation: socialIconAnimation 1s infinite;
+}
+
+
 
 html,
 body {
